# Clippings

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.opencode/plans/: news-digest.md
docs/: ai-backend.md  notifications.md  sources.md
src/: config.py  main.py
src/fetcher/: __init__.py  base.py  bbc.py  hackernews.py  models.py  rss.py
src/grouper/: topic.py
src/notifier/: __init__.py  base.py  discord.py  discord_bot.py  ntfy.py  telegram.py
src/scheduler/: runner.py  scheduler.py
src/storage/: json_store.py
src/summarizer/: ai.py
src/web/: app.py  index.html
